--- a/static/style.css
+++ b/static/style.css
@@ -197,7 +197,7 @@ iframe {
 }
 
 .draggable_lecture:hover {
-  cursor: grab;
+  cursor:grab;
   background-color: blanchedalmond;
   box-shadow: 0 0 10px 2px;
 }
@@ -241,8 +241,7 @@ iframe {
   /*position: absolute;
     /*border: 1px solid;*/
   /*border-color: #aaaaaa;*/
-  padding: 5rem;
-  ;
+  padding: 5rem;;
   border-radius: 1rem;
   top: 30vh;
   left: 35rem;
@@ -328,7 +327,6 @@ iframe {
 .popUpEditLecture {
   display: none
 }
-
 .popUpEditLecture.openModal {
   display: block;
   padding: 0.1rem;
@@ -347,7 +345,6 @@ iframe {
 .popUpAddLecture {
   display: none
 }
-
 .popUpAddLecture.openModal {
   display: block;
   padding: 0.1rem;
@@ -362,11 +359,10 @@ iframe {
   font-size: small;
   box-shadow: 0 0 10px 2px;
 }
-
+ 
 .popUpCreateSection {
   display: none;
 }
-
 .popUpCreateSection.openModal {
   display: block;
   padding: 0.1rem;
@@ -385,7 +381,6 @@ iframe {
 .popUpEditSection {
   display: none;
 }
-
 .popUpEditSection.openModal {
   display: block;
   padding: 0.1rem;
@@ -429,7 +424,6 @@ iframe {
 .editSection {
   display: none;
 }
-
 .editSection.openModal {
   display: block;
 }
@@ -556,12 +550,10 @@ iframe {
   z-index: 1;
   opacity: 1;
 }
-
 /*========================================*/
 .fileLibraryModule {
   display: none;
 }
-
 .fileLibraryModule.openModal {
   display: block;
   background-color: whitesmoke;
@@ -590,7 +582,25 @@ iframe {
 }
 
 /*=======================================*/
+.show_quiz_box {
+  display: block;
+  position: absolute;
+  /*border: 1px solid;*/
+  /*border-color: #aaaaaa;*/
+  border-radius: 1rem;
+  top: 20vh;
+  left: 15rem;
+  background-color: whitesmoke;
+  height: fit-content;
+  width: 50rem;
+  padding: 1rem;
+  box-shadow: 0 0 10px 2px;
+  z-index: 1;
+  opacity: 1;
+}
 
+
+/*=============================================*/
 .fileLibUploadModule {
   display: none;
 }
@@ -635,32 +645,29 @@ iframe {
   padding: 1rem;
   box-shadow: 0 0 10px 2px;
 }
-
 /*========================================*/
 .popUpLecture {
   display: none;
 }
-
 .popUpLecture.openModal {
   display: block;
-  padding: 0.1rem;
-  position: absolute;
-  left: 2rem;
-  top: -1rem;
-  height: fit-content;
-  width: fit-content;
-  border: solid 1px black;
-  background-color: white;
-  z-index: 1;
-  font-size: small;
-  box-shadow: 0 0 10px 2px;
-}
+    padding: 0.1rem;
+    position: absolute;
+    left: 2rem;
+    top: -1rem;
+    height: fit-content;
+    width: fit-content;
+    border: solid 1px black;
+    background-color: white;
+    z-index: 1;
+    font-size: small;
+    box-shadow: 0 0 10px 2px;
+  }
 
 /*=====================================*/
 .editSectionTitle {
   display: none;
 }
-
 .editSectionTitle.openModal {
   display: block;
 }
@@ -725,9 +732,8 @@ iframe {
   border-bottom: 1px solid grey;
   height: 5rem;
 }
-
 .subject_box_bar:hover {
-  background-color: whitesmoke;
+  background-color:whitesmoke;
   border-bottom: 1px solid grey;
   height: 5rem;
   box-shadow: 0 0 10px 2px;
