--- a/templates/cart/credit_card.html
+++ b/templates/cart/credit_card.html
@@ -20,7 +20,7 @@
         {% else %}
             <input type='text' class='form-control' name='sum' value='{{subject.price.regular}}'/><br>     
         {% endif %}
-        <input type='text' class='form-control' name='clientid' value='{{request.user.id}}' hidden />
+        <input type='text' class='form-control' name='clientid' value='{{request.user.id}}' hidden/>
         <input type='text' class='form-control' name='orderid' value='{{transaction.id}}' hidden />
         <input type='submit' value='Оплатить' class='btn btn-sm btn-block btn-outline-dark'/>
         </form>
@@ -51,8 +51,7 @@
             </p>
             
 
-            <p><strong>Уважаемые Клиенты, информируем Вас о том, что при запросе возврата денежных средств при отказе от покупки, возврат
-            производится исключительно на ту же банковскую карту, с которой была произведена оплата</strong></p>
+            <p><strong>Уважаемые Клиенты, информируем Вас о том, что при запросе возврата денежных средств при отказе от покупки, возврат производится исключительно на ту же банковскую карту, с которой была произведена оплата</strong></p>
         </div>
         </div>
  
