--- a/templates/index.html
+++ b/templates/index.html
@@ -2,28 +2,18 @@
 {% load static %}
 {% block content %}
 <div class="container">
-    <div class="row p-2">
+    <!-- <div class="row p-2">
         <div class="col">
-            <p>
-            <h3>
-               Добро пожаловать в ваш Удаленный Университет, место, где вы можете обмениваться знаниями и умениями с другими людьми.
-
-            </h3>
-            </p>
-
-            <p>
-            <h3>
-               Приглашаем вас стать нашими лекторами и зарабатывать на своих знаниях и умениях.
-            </h3>
-            </p>
-
-            <p>
-            <h3>
-                Ваши видеофайлы защищены системой DRM и предоставляются пользователям без возможности их сохранения на компьютер пользователя.
-            </h3>
-            </p>
-
+            <p></p><h3>Добро пожаловать в ваш Удаленный Университет, место, где вы можете обмениваться знаниями и умениями с другими людьми.</h3></p>
+            <p><h3>Приглашаем вас стать нашими лекторами и зарабатывать на своих знаниях и умениях.</h3></p>
+            <p><h3>Ваши видеофайлы защищены системой DRM и предоставляются пользователям без возможности их сохранения на компьютер пользователя.</h3></p>
         </div>
+    </div> -->
+
+    <div class="row">
+        <p><h3>
+            Курсы от лучших лекторов с пожизненым доступом от 1499 руб.
+        </h3></p>
     </div>
 
     <div class="row mt-3">
