--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -106,10 +106,16 @@
 </div>
 <!-- ==================================End of File Library Module============================== -->
 
-        {% if subject.being_edited == False %}
+        {% if subject.being_edited == True %}
+            <a href="{% url 'agree' subject.id%}" style="text-decoration: none">
+                <div class="subject_box_bar">
+                <h5 style="margin: auto; color: red">Загрузить обновление</h5>
+                </div>
+            </a>
+        {% else %}
             <a href="{% url 'agreement' subject.id%}" style="text-decoration: none">
                 <div class="subject_box_bar">
-                <h5 style="margin: auto; color: red">Загрузить курс на сервер</h5>
+                    <h5 style="margin: auto; color: red">Загрузить курс на сервер</h5>
                 </div>
             </a>
         {% endif %}
