--- a/project/static/style.css
+++ b/project/static/style.css
@@ -266,6 +266,27 @@ iframe {
 }
 
 /*=======================================*/
+.popUpEditQuiz {
+  display: none;
+}
+
+.popUpEditQuiz.openModal {
+  display: block;
+  padding: 0.1rem;
+  position: absolute;
+  left: 2rem;
+  top: -1rem;
+  height: fit-content;
+  width: fit-content;
+  border: solid 1px black;
+  background-color: white;
+  z-index: 1;
+  font-size: small;
+  box-shadow: 0 0 10px 2px;
+}
+/*===============================================*/
+
+
 .popUp {
   display: none;
 }
