--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ h5 {
 }
 
 .card_menu {
-  display: inline-block;
+  /*display: inline-block;*/
   width: 45rem;
   min-height: fit-content;
   max-height: fit-content;
@@ -217,7 +217,7 @@ iframe {
   border-color: black;
   height: fit-content;
   width: 70rem;
-  /*background-color: red;*/
+  box-shadow: 0 0 10px 2px;
 }
 
 .lecture_box {
@@ -266,6 +266,27 @@ iframe {
 }
 
 /*=======================================*/
+.popUpEditQuiz {
+  display: none;
+}
+
+.popUpEditQuiz.openModal {
+  display: block;
+  padding: 0.1rem;
+  position: absolute;
+  left: 2rem;
+  top: -1rem;
+  height: fit-content;
+  width: fit-content;
+  border: solid 1px black;
+  background-color: white;
+  z-index: 1;
+  font-size: small;
+  box-shadow: 0 0 10px 2px;
+}
+/*===============================================*/
+
+
 .popUp {
   display: none;
 }
