--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ h5 {
 }
 
 .card_menu {
-  display: inline-block;
+  /*display: inline-block;*/
   width: 45rem;
   min-height: fit-content;
   max-height: fit-content;
@@ -197,7 +197,7 @@ iframe {
 }
 
 .draggable_lecture:hover {
-  cursor:grab;
+  cursor: grab;
   background-color: blanchedalmond;
   box-shadow: 0 0 10px 2px;
 }
@@ -217,7 +217,7 @@ iframe {
   border-color: black;
   height: fit-content;
   width: 70rem;
-  /*background-color: red;*/
+  box-shadow: 0 0 10px 2px;
 }
 
 .lecture_box {
@@ -241,7 +241,8 @@ iframe {
   /*position: absolute;
     /*border: 1px solid;*/
   /*border-color: #aaaaaa;*/
-  padding: 5rem;;
+  padding: 5rem;
+  ;
   border-radius: 1rem;
   top: 30vh;
   left: 35rem;
@@ -266,6 +267,28 @@ iframe {
 }
 
 /*=======================================*/
+.popUpEditQuiz {
+  display: none;
+}
+
+.popUpEditQuiz.openModal {
+  display: block;
+  padding: 0.1rem;
+  position: absolute;
+  left: 2rem;
+  top: -1rem;
+  height: fit-content;
+  width: fit-content;
+  border: solid 1px black;
+  background-color: white;
+  z-index: 1;
+  font-size: small;
+  box-shadow: 0 0 10px 2px;
+}
+
+/*===============================================*/
+
+
 .popUp {
   display: none;
 }
@@ -327,6 +350,7 @@ iframe {
 .popUpEditLecture {
   display: none
 }
+
 .popUpEditLecture.openModal {
   display: block;
   padding: 0.1rem;
@@ -345,6 +369,7 @@ iframe {
 .popUpAddLecture {
   display: none
 }
+
 .popUpAddLecture.openModal {
   display: block;
   padding: 0.1rem;
@@ -359,10 +384,11 @@ iframe {
   font-size: small;
   box-shadow: 0 0 10px 2px;
 }
- 
+
 .popUpCreateSection {
   display: none;
 }
+
 .popUpCreateSection.openModal {
   display: block;
   padding: 0.1rem;
@@ -381,6 +407,7 @@ iframe {
 .popUpEditSection {
   display: none;
 }
+
 .popUpEditSection.openModal {
   display: block;
   padding: 0.1rem;
@@ -424,6 +451,7 @@ iframe {
 .editSection {
   display: none;
 }
+
 .editSection.openModal {
   display: block;
 }
@@ -550,10 +578,12 @@ iframe {
   z-index: 1;
   opacity: 1;
 }
+
 /*========================================*/
 .fileLibraryModule {
   display: none;
 }
+
 .fileLibraryModule.openModal {
   display: block;
   background-color: whitesmoke;
@@ -645,29 +675,32 @@ iframe {
   padding: 1rem;
   box-shadow: 0 0 10px 2px;
 }
+
 /*========================================*/
 .popUpLecture {
   display: none;
 }
+
 .popUpLecture.openModal {
   display: block;
-    padding: 0.1rem;
-    position: absolute;
-    left: 2rem;
-    top: -1rem;
-    height: fit-content;
-    width: fit-content;
-    border: solid 1px black;
-    background-color: white;
-    z-index: 1;
-    font-size: small;
-    box-shadow: 0 0 10px 2px;
-  }
+  padding: 0.1rem;
+  position: absolute;
+  left: 2rem;
+  top: -1rem;
+  height: fit-content;
+  width: fit-content;
+  border: solid 1px black;
+  background-color: white;
+  z-index: 1;
+  font-size: small;
+  box-shadow: 0 0 10px 2px;
+}
 
 /*=====================================*/
 .editSectionTitle {
   display: none;
 }
+
 .editSectionTitle.openModal {
   display: block;
 }
@@ -732,8 +765,9 @@ iframe {
   border-bottom: 1px solid grey;
   height: 5rem;
 }
+
 .subject_box_bar:hover {
-  background-color:whitesmoke;
+  background-color: whitesmoke;
   border-bottom: 1px solid grey;
   height: 5rem;
   box-shadow: 0 0 10px 2px;
@@ -906,7 +940,7 @@ form_wrapper.hidden {
   /* font-weight: 900; */
   position: relative;
   /* position: absolute; */
- 
+
   /* display: block; */
   font-size: 20px;
   color: grey;
